--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,36 @@
 ---
-title: Introduction
-description: 'Welcome to the home of your new documentation'
+title: "Introduction"
+description: "Learn about Crab and explore the documentation page."
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+Crab is an easy to use application to streamline your department. It offers an aresenal of amazing modules to assist any essential department type.
 
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
-
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
+<CardGroup cols={3}>
+<Card title="Installation" icon="download" href="installation">
+  Discover how to install and configure the core settings of Crab!
+</Card>
+<Card title="Shift Management" icon="clock" href="/modules/shift-mgmt">
+  Crab offers an amazing shift management system with great features.
+</Card>
+<Card title="Staff Management" icon="id-badge" href="/modules/staff-mgmt">
+  Manage your department personnel with our great Staff Management system!
+</Card>
+<Card title="Record Logging" icon="clipboard" href="/modules/records">
+  Record all your patrol logs using our record system!
+</Card>
+<Card title="Report Logging" icon="file-export" href="/modules/reports">
+  Report anything that happens on duty using our efficient report logging system.
+</Card>
+<Card title="Privacy Police" icon="eye" href="/legal/privacy">
+  Explore Crab's Privacy Policy.
+</Card>
+<Card title="Terms of Service" icon="user" href="/legal/tos">
+  Read about Crab's terms of service.
+</Card>
+<Card title="Exclusion" icon="gavel" href="/legal/exclusion">
+  Read about how the exclusion process works and how to appeal your exclusion.
+</Card>
+<Card title="Data Removal" icon="server" href="/legal/data-removal">
+  Learn how to remove your data from Crab's servers.
+</Card>
 </CardGroup>
